- Support :subform_columns option in column form_ui_options, or column's options, when the column is rendered as subform
- Use :subform_columns option in :horizontal and :vertical show_ui too
- Add layout multiple support to ActionColumns, so forms can have columns

= 4.2.3
- Make simplified searches on LogicalQueryParser bridge working with upstream gem, no need for my fork
- Styles for radio form_ui
- Fix style for checkbox list in subform
- Fix constraints (broken on 4.2.2 on some cases)
- Add clear_form_column_if, works like hide_form_column_if but sends the column empty, to clear it
- Add checkboxes form UI, like select form UI in collection associations but supporting DB columns (e.g. columns using serialize)
- Support draggable form UI in non-association columns, like checkboxes (e.g. columns using serialize)
- Add list UI for select_multiple, dragg, checkboxes, select and radio. Select and radio were handled by format_column_value, but the list UI works better

= 4.2.2
- Support setting form_ui_options with nil, for subforms
- Support saving when embedded on through singular association, as it's supported for nested too

= 4.2.1
- Fix replacing tinymce fields with update_columns
- Support refresh_link in radio form UI
- Rewrite refresh_link JS event handler to find the field without relying in the html structure

= 4.2.0
- Integrate LogicalQueryParser, supporting full logical search, or simplified searches with 'all keywords' and 'any keyword' operators.
- Display unauthorized column in form as show action, so show_ui or show override is used if exists.
- Display unauthorized subform with show_ui as show action, to display readonly subform tables.
- Add subform_includes to column, and preload_for_form method to preload associations on edit action, speed up on big forms with long subforms or many nested subforms.
- Speedup on refreshing columns and saving big forms.
- Support add_new with chosen bridge.