@@ -2,6 +2,7 @@
 - Support :subform_columns option in column form_ui_options, or column's options, when the column is rendered as subform
 - Use :subform_columns option in :horizontal and :vertical show_ui too
 - Add layout multiple support to ActionColumns, so forms can have columns
+- Better exception handling when error is raised rendering a column, no more empty backtraces
 
 = 4.2.3
 - Make simplified searches on LogicalQueryParser bridge working with upstream gem, no need for my fork
